# poetry_env_bug

./: README.md  pyproject.toml
.github/workflows/: test.yml  workaround.yml
