[project]
name = "poetry-env-bug"
version = "0.1.0"
description = "Demonstrate poetry 2.1 environment bug."
authors = [
    {name = "Brian Kohan",email = "bckohan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
